--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
         <module>eureka-server</module>
         <module>eureka-client</module>
         <module>eureka-consumer</module>
+        <module>eureka-consumer-feign</module>
+        <module>config-server</module>
+        <module>config-client</module>
     </modules>
 
 </project>
